--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     Hello there, awesome person! 
       <h1>I'm a header 1!</h1>
 <img src="https://avatars.githubusercontent.com/u/44498620?v=4">
+      <ol>
+    <li>github</li>
+    <li>youtube</li>
+    <li>discord</li>
+</ol>
+
 
   </body>
 
