--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ol>
     <li>github</li>
     <li>youtube</li>
-    <li>discord</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ol>
 
 
